# home_projects

./: .env  .gitignore  Cargo.toml  README.md  data.db
configuration/: development.yaml
entity/: Cargo.toml
entity/src/: category.rs  lib.rs  project.rs  task.rs  user.rs
migrations/: 4_project.sql  5_milestone.sql  6_task.sql
src/: database.rs  error.rs  lib.rs  main.rs  server.rs  settings.rs  telemetry.rs  utils.rs
src/router/: mod.rs  projects.rs  users.rs
tests/: database.rs  main.rs  router.rs
