[package]
name = "home_projects"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity"]

[dependencies]
sea-orm = { version = "0.7.1", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde_json = "1.0.79"
tokio = { version = "1.17", features = ["full"] }
entity = { path = "entity" }
anyhow = "1.0.56"
tokio-stream = "0.1.8"
uuid = "0.8.2"
chrono = { version="0.4.19", features = ["serde"] }
dotenv = "0.15.0"
serde-aux = "3.0.1"
serde_derive = "1.0.136"
axum = "0.5.1"
tower-http = { version = "0.2.5", features = ["trace", "add-extension", "cors" ] }
tower = "0.4.12"
thiserror = "1.0.30"
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-log = "0.1.2"
tracing-bunyan-formatter = "0.3.2"
reqwest = { version = "0.11.10", features = ["json", "rustls-tls", "trust-dns"], default-features = false }
validator = { version = "0.14.0", features = ["derive"] }
http-body = "0.4.4"
bytes = "1.1.0"
serde_path_to_error = "0.1.7"
hyper = "0.14.18"
argon2 = "0.4.0"
rand = "0.8.5"
