[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version="0.4.19", features = ["serde"] }

[dependencies.sea-orm]
version = "^0.7.0"
features = [
  "macros",
  "debug-print",
"runtime-tokio-rustls",
  "sqlx-sqlite",
]